# aai510-final-project

./: Dockerfile  LICENSE  README.md  finalProjectSection2-Team3.html  finalProjectSection2-Team3.ipynb  finalProjectSectionX-Team3.ipynb  pyproject.toml
.Trash-0/info/: deleteme.ipynb.trashinfo  untitled.txt.trashinfo
.devcontainer/: Containerfile  Dockerfile  devcontainer.json  requirements.txt
data/: Xy_smote_death_final_nb.parquet  Xy_smote_hospdead_final_nb.parquet  cleaned_output.parquet  cleaned_output_final_nb.parquet
dev-fuad/: eda.ipynb  features-analysis.ipynb  modeling.ipynb
dev-spencer/: docker start jupyter.txt  eda.ipynb
dev-tori/: eda.ipynb  modeling.ipynb
